<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:fillViewport="true"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/logo"
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:textColor="@color/black"
                android:text="@string/join_the_magic"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/be_cinergy_elite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/descriptionRv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                tools:itemCount="5"
                tools:listitem="@layout/description_items"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/signIn"
                app:layout_constraintTop_toBottomOf="@id/descriptionRv"
                app:cornerRadius="8dp"
                android:paddingHorizontal="36dp"
                android:layout_marginTop="38dp"
                android:text="@string/sign_in_now"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guestLogin"
                app:layout_constraintEnd_toEndOf="@id/guestLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/signUpDescription"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/signIn"
                android:text="@string/don_t_have_an_account"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/signUp"
                app:layout_constraintTop_toBottomOf="@id/signUpDescription"
                app:cornerRadius="8dp"
                android:paddingHorizontal="36dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/guestLogin"
                app:layout_constraintEnd_toEndOf="@id/guestLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/guestLogin"
                app:layout_constraintTop_toBottomOf="@id/signUp"
                app:cornerRadius="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/continue_as_guest"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guestLogin"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>