<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".booking.BookingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_24"
        app:title="@string/back"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/tulsa_ok"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/location_24dp"
            app:drawableTint="@color/primary" />
    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:indeterminateAnimationType="contiguous"
        app:indicatorColor="@array/progress_colors" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        tools:text="Escape Room - Bunker 57" />
    <TextView
        android:id="@+id/durationRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="NR • 60 MIN" />

    <TextView
        android:id="@+id/chooseDate"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/poster"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start"
        android:text="@string/choose_date"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/end"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dateRv"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/chooseDate"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        tools:listitem="@layout/date_item"
        android:paddingVertical="4dp"
        android:background="@color/grey"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/chooseTime"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/dateRv"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start"
        android:text="@string/choose_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/end"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeRv"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/chooseTime"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintEnd_toEndOf="@id/end"
        tools:listitem="@layout/time_item"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/layoutGroup"
        android:layout_width="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:constraint_referenced_ids="chooseTime,timeRv, poster, title, durationRating, chooseDate, dateRv, bookNow"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bookNow"
        app:cornerRadius="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/continues"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/start"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>